# aula08-bootcamp-python

./: README.md  etl.py  pipeline.py  pyproject.toml
