[tool.poetry]
name = "aula08-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandera = "^0.20.3"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
